// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simulates opening mobile menu 1`] = `
<nav
  className="sc-hKgJUU hvVptd"
>
  <span
    className="sc-eCstlR dCnOVu"
    onClick={[Function]}
  >
    <i
      className="fas fa-bars"
      style={
        Object {
          "position": "",
        }
      }
    />
  </span>
  <ul
    className="sc-dlfnuX buDFhy"
  >
    <li
      onClick={[Function]}
    >
      <a
        href="/signIn"
        onClick={[Function]}
      >
        <i
          className="fas fa-sign-in-alt"
        />
         
        Sign in
      </a>
    </li>
    <li
      className="vertical-line"
    >
      |
    </li>
    <li
      onClick={[Function]}
    >
      <a
        href="/register"
        onClick={[Function]}
      >
        <i />
        Register
      </a>
    </li>
    <li
      className="vertical-line"
    >
      |
    </li>
    <li
      onClick={[Function]}
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <i
          className="fas fa-search"
        />
         
        Search
      </a>
    </li>
  </ul>
  <h1
    className="logo"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <i />
      DressUp
    </a>
  </h1>
  <div
    className="cart"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <i
        className="fas fa-shopping-cart"
      />
       
      Cart
    </a>
  </div>
</nav>
`;

exports[`simulates opening mobile menu 2`] = `
<nav
  className="sc-hKgJUU hvVptd"
>
  <span
    className="sc-eCstlR dCnOVu"
    onClick={[Function]}
  >
    <i
      className="fas fa-times"
      style={
        Object {
          "position": "fixed",
        }
      }
    />
  </span>
  <ul
    className="sc-dlfnuX hXcDFn"
  >
    <li
      onClick={[Function]}
    >
      <a
        href="/signIn"
        onClick={[Function]}
      >
        <i
          className="fas fa-sign-in-alt"
        />
         
        Sign in
      </a>
    </li>
    <li
      className="vertical-line"
    >
      |
    </li>
    <li
      onClick={[Function]}
    >
      <a
        href="/register"
        onClick={[Function]}
      >
        <i />
        Register
      </a>
    </li>
    <li
      className="vertical-line"
    >
      |
    </li>
    <li
      onClick={[Function]}
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <i
          className="fas fa-search"
        />
         
        Search
      </a>
    </li>
  </ul>
  <h1
    className="logo"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <i />
      DressUp
    </a>
  </h1>
  <div
    className="cart"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <i
        className="fas fa-shopping-cart"
      />
       
      Cart
    </a>
  </div>
</nav>
`;
